feat: add 3 box styles for cc

--- a/popup.html
+++ b/popup.html
@@ -34,13 +34,18 @@
       </div>
     </aside>
     <main>
-      <div class="presets-container">
+      <div class="main-container">
         <h3>Presets</h3>
-        <div class="content" id="presets-content"></div>
+        <div class="content" id="main-content">
+          <section id="section-box"></section>
+          <section id="section-fontfamily"></section>
+          <section id="section-color"></section>
+          <section id="section-fontsize"></section>
+        </div>
       </div>
-      <div class="customize-container">
+      <div class="aside-container">
         <h3>Customize</h3>
-        <div class="content" id="customize-content">Content</div>
+        <div class="content" id="aside-content">Content</div>
       </div>
     </main>
     <footer>
