--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Caption Magic for your subtitle videos</title>
+    <title>Beauty Captions for your subtitle videos</title>
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
@@ -14,10 +14,10 @@
             d="M224,48H32A16,16,0,0,0,16,64V192a16,16,0,0,0,16,16H224a16,16,0,0,0,16-16V64A16,16,0,0,0,224,48Zm0,144H32V64H224V192ZM48,136a8,8,0,0,1,8-8H72a8,8,0,0,1,0,16H56A8,8,0,0,1,48,136Zm160,0a8,8,0,0,1-8,8H104a8,8,0,0,1,0-16h96A8,8,0,0,1,208,136Zm-48,32a8,8,0,0,1-8,8H56a8,8,0,0,1,0-16h96A8,8,0,0,1,160,168Zm48,0a8,8,0,0,1-8,8H184a8,8,0,0,1,0-16h16A8,8,0,0,1,208,168Z"
           ></path>
         </svg>
-        <h1>Caption Magic</h1>
+        <h1>Beauty Captions</h1>
       </picture>
       <nav>
-        <label class="switch" id="switch-extension-status">
+        <label class="switch" id="extension-status-container">
           <input type="checkbox" id="checkbox-extension-status" />
           <span class="slider"></span>
         </label>
@@ -34,8 +34,8 @@
       <div role="alert" class="alert alert-info" id="extension-status">
         <div class="backdrop"></div>
         <p>
-          Please, <strong>you first need to turn on the subtitles</strong> for
-          your YouTube video
+          Turn on <strong>Beautiful Subtitles</strong> for the best YouTube
+          subtitles experience!
         </p>
       </div>
     </aside>
@@ -56,7 +56,7 @@
     </main>
     <footer>
       <p>
-        &copy; <span id="current-year"></span> Caption Magic
+        &copy; <span id="current-year"></span> Beauty Captions
         <a href="https://moiseshp.dev" target="_blank"> by moiseshp</a>
       </p>
       <p>v0.1.0</p>
