feat: add styles to grid section

--- a/popup.html
+++ b/popup.html
@@ -41,17 +41,26 @@
     </aside>
     <main id="main-container">
       <div class="section-main-container">
-        <h3>Presets</h3>
         <div class="content">
+          <h3 class="section-title">Box</h3>
           <section id="section-boxtype"></section>
-          <section id="section-fontfamily"></section>
-          <section id="section-color"></section>
-          <section id="section-fontsize"></section>
+        </div>
+        <div class="content">
+          <h3 class="section-title">Font size</h3>
+          <section class="section-group-grid" id="section-fontsize"></section>
         </div>
       </div>
       <div class="section-main-container">
-        <h3>Customize</h3>
-        <div class="content">Content</div>
+        <div class="content">
+          <h3 class="section-title">Font family</h3>
+          <section id="section-fontfamily"></section>
+        </div>
+      </div>
+      <div class="section-main-container">
+        <div class="content">
+          <h3 class="section-title">Color</h3>
+          <section id="section-color"></section>
+        </div>
       </div>
     </main>
     <footer>
