feat: add section item active

--- a/popup.html
+++ b/popup.html
@@ -40,27 +40,27 @@
       </div>
     </aside>
     <main id="main-container">
-      <div class="section-main-container">
-        <div class="content">
+      <div>
+        <section>
           <h3 class="section-title">Box</h3>
-          <section id="section-boxtype"></section>
-        </div>
-        <div class="content">
+          <div id="section-boxType"></section>
+        </section>
+        <section>
           <h3 class="section-title">Font size</h3>
-          <section class="section-group-grid" id="section-fontsize"></section>
-        </div>
+          <div id="section-fontSize"></section>
+        </section>
       </div>
-      <div class="section-main-container">
-        <div class="content">
+      <div>
+        <section>
           <h3 class="section-title">Font family</h3>
-          <section id="section-fontfamily"></section>
-        </div>
+          <div id="section-fontFamily"></section>
+        </section>
       </div>
-      <div class="section-main-container">
-        <div class="content">
+      <div>
+        <section>
           <h3 class="section-title">Color</h3>
-          <section id="section-color"></section>
-        </div>
+          <div id="section-color"></div>
+        </section>
       </div>
     </main>
     <footer>
