feat: improvement footer signature

--- a/popup.html
+++ b/popup.html
@@ -79,10 +79,24 @@
     </main>
     <footer>
       <p>
-        &copy; <span id="current-year"></span> Beauty Captions
-        <a href="https://moiseshp.dev" target="_blank"> by moiseshp</a>
+        &copy; <span id="current-year"></span> Beauty Captions developed by
+        <a
+          href="https://moiseshp.dev"
+          target="_blank"
+          title="go to moiseshp website"
+        >
+          moiseshp</a
+        >
+        source code on
+        <a
+          href="https://github.com/moiseshp/beauty-captions"
+          target="_blank"
+          title="go to github source code"
+        >
+          Github
+        </a>
       </p>
-      <p>v0.1.0</p>
+      <p>version 0.1.0</p>
     </footer>
     <script src="./scripts/constants.js" defer></script>
     <script src="./scripts/utils.js" defer></script>
